--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <title>Google singin</title>
+    <meta name="google-signin-client_id"
+        content="188844685764-mracgfr8af5av21u6l16ijcgk4rpe4nr.apps.googleusercontent.com">
+
 </head>
 
 <body>
-    <h1>Acceso Genial</h1>
+    <h1>Google Sign in</h1>
+    <hr>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
+
+    <script>
+
+        const url = (window.location.hostname.includes('localhost'))
+            ? 'http://localhost:3001/api/auth/google'
+            : 'https://app-bit-notes.herokuapp.com/api/auth/google';
+
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+            var id_token = googleUser.getAuthResponse().id_token;
+            const data = { id_token }
+
+            fetch(url, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
+            })
+                .then(resp => resp.json())
+                .then(data => console.log(data))
+                .catch(console.log)
+
+        }
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+            });
+        }
+
+
+    </script>
 </body>
 
 </html>
